# sdk-nrf

doc/nrf/releases_and_maturity/: known_issues.rst
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
include/bluetooth/mesh/: models.h  txp_settings.h  txp_settings_cli.h  txp_settings_srv.h
samples/bluetooth/mesh/ble_peripheral_lbs_coex/: prj.conf
samples/bluetooth/mesh/latency/: CMakeLists.txt  README.rts  prj.conf
samples/bluetooth/mesh/latency/include/: ethernet_command_system.h  latency_test.h
samples/bluetooth/mesh/latency/src/: latency_test.c  main.c  model_handler.c
samples/bluetooth/mesh/latency/src/pca20036_dfu/: ethernet_command_system.c  ethernet_dfu.c  pca20036_ethernet.c
samples/bluetooth/mesh/light/: overlay-dfu.conf
samples/bluetooth/mesh/light_ctrl/: README.rst
samples/bluetooth/mesh/light_ctrl/src/: main.c
samples/bluetooth/mesh/light_switch/include/: button_assignments.h  button_handler.h
samples/bluetooth/mesh/light_switch/src/: button_handler.c  main.c
samples/bluetooth/mesh/pca20036/include/: ethernet_command_system.h  ethernet_dfu.h
samples/bluetooth/mesh/pca20036/src/: ethernet_dfu.c  hp_led.c  main.c
samples/bluetooth/mesh/settings_client/: CMakeLists.txt  README.rts  prj.conf
samples/bluetooth/mesh/settings_client/include/: settings.h  (+3 more)
samples/bluetooth/mesh/settings_server/: CMakeLists.txt  README.rts  prj.conf
samples/bluetooth/mesh/settings_server/include/: ethernet_command_system.h  latency_test.h  model_handler.h  settings.h  settings_srv.h
samples/bluetooth/mesh/settings_server/misc/backend/: set_tx_power.py
samples/bluetooth/mesh/settings_server/src/: latency_test.c  main.c  model_handler.c  model_test.c  settings_srv.c
samples/bluetooth/mesh/settings_server/src/pca20036_dfu/: ethernet_command_system.c  ethernet_dfu.c
samples/bluetooth/mesh/txp_client/: CMakeLists.txt  README.rts  prj.conf
samples/bluetooth/mesh/txp_server/: CMakeLists.txt  README.rts  prj.conf
samples/nrf9160/emds_v2.12/: Kconfig  README.rst  READ_NCSIDB-903.txt  debug_sess_wo_thread_info.txt  debug_session_0.txt  prj.conf  sample.yaml
samples/nrf9160/emds_v2.12/src/: main.c  new_main.c
subsys/bluetooth/mesh/: Kconfig.models  txp_settings_cli.c  txp_settings_srv.c
subsys/emds/: emds.c
(+16 files in other folders)
